syntax = "proto3";
package christmascard;

service Christmascard {
  rpc Metadata (MetadataRequest) returns (MetadataReply);
  rpc GetSlide (GetSlideRequest) returns (GetSlideReply);
}

message MetadataRequest {
}

message MetadataReply {
  int32 length = 1;
  string author = 2;
}

message GetSlideRequest {
  int32 index = 1;
}

message GetSlideReply {
  int32 index = 1;
  string config = 2;
}
